fixed Firefox headshot squishing

--- a/css/styles.css
+++ b/css/styles.css
@@ -401,7 +401,6 @@ a:active {
 
   .about #headshots {
     /*Display*/
-    display: -webkit-box;
     overflow: hidden;
     /*Centering*/
     text-align: center;
